...
                                _minInternet = 0.0;
                                _selectedCountry = 'All';
                              });
                              _applyFiltersAndSort();
                              Navigator.pop(context);
                            },
                            child: const Text('Reset', style: TextStyle(fontFamily: 'SFPro', fontSize: 18, fontWeight: FontWeight.w600, color: Colors.grey)),
                          ),
                        ),
                        Expanded(
                          child: ElevatedButton(
                            onPressed: () { 
                              setState(() {}); 
...
                          color: const Color(0xFF485759)
                        )
                      ),
                      Row(
                        children: [
                          AnimatedHoverButton(
                            text: 'Filter',
                            icon: Icons.filter_alt_outlined,
                            onTap: _showFilterDialog,
                          ),
                          const SizedBox(width: 12),
                          AnimatedHoverButton(
                            text: _currentSort == 'Default' ? 'Sort by' : 'Sorted',
...
