...
                // ВАЛЮТА
                _buildSectionHeader('Currency', Icons.trending_up),
                const SizedBox(height: 12),
                ValueListenableBuilder(
                      valueListenable: AppState.currency,
                      builder: (context, currentCurrency, __) => _buildSegmentedControl(
                        ['EUR', 'USD', 'UAH'], 
                        currentCurrency, 
                        (val) {
                          AppState.currency.value = val;
                          AppState.savePreference('currency', val); // ЗБЕРІГАЄМО В БД
                        }
                      ),
...
